--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
   <header>
     <h1>InterXAI</h1>
     <nav>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/collaborate">Collaborate</a>
+      <a href="{{ site.baseurl }}/">Home</a>
+      <a href="{{ site.baseurl }}/about">About</a>
+      <a href="{{ site.baseurl }}/collaborate">Collaborate</a>
     </nav>
   </header>
   <main>
