--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
       <a href="{{ site.baseurl }}/">Home</a>
       <a href="{{ site.baseurl }}/about">About</a>
       <a href="{{ site.baseurl }}/collaborate">Collaborate</a>
+      <a href="{{ site.baseurl }}/blog/">Blog</a>
     </nav>
   </header>
   <main>
