--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,8 +65,10 @@
   <a href="{{ site.baseurl }}/">Home</a> |
   <a href="{{ site.baseurl }}/about/">About</a> |
   <a href="{{ site.baseurl }}/collaborate/">Collaborate</a> |
-  <a href="{{ site.baseurl }}/blog/">Blog</a>
-    </nav>
+  <a href="{{ site.baseurl }}/blog/">Blog</a> |
+  <a href="{{ site.baseurl }}/case-studies/">Case Studies</a>
+</nav>
+
     <hr>
   </header>
 
