--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,11 @@
   <a href="{{ site.baseurl }}/">Home</a> |
   <a href="{{ site.baseurl }}/about/">About</a> |
   <a href="{{ site.baseurl }}/collaborate/">Collaborate</a> |
-  <a href="{{ site.baseurl }}/blog/">Blog</a> |
-  <a href="{{ site.baseurl }}/case-studies/">Case Studies</a>
+  <a href="{{ site.baseurl }}/case-studies/">Case Studies</a> |
+  <a href="{{ site.baseurl }}/submit/">Submit</a> |
+  <a href="{{ site.baseurl }}/blog/">Blog</a>
 </nav>
+
 
     <hr>
   </header>
