--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,7 @@
       <a href="{{ site.baseurl }}/collaborate/">Collaborate</a>
       <a href="{{ site.baseurl }}/case-studies/">Case Studies</a>
       <a href="{{ site.baseurl }}/submit/">Submit</a>
+      <a href="{{ site.baseurl }}/whitepaper/">White Paper</a>
       <a href="{{ site.baseurl }}/blog/">Blog</a>
     </nav>
     <hr>
